--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -110,7 +110,7 @@
             <button type="submit">Sign Up</button>
         </div>
 		<div class="form-group">
-		    <button type="button" onclick="window.location.href='./login.html'" style="background-color: #2196F3;">Login</button>
+		    <button type="button" onclick="window.location.href='./login'" style="background-color: #2196F3;">Login</button>
 		</div>
         <div id="message"></div>
     </form>
