--- a/src/main/resources/templates/signup-error.html
+++ b/src/main/resources/templates/signup-error.html
@@ -1,4 +1,4 @@
-<!-- src/main/resources/templates/signup-error.html -->
+<!-------------------------dummy code-------------------------------->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
