--- a/src/main/resources/templates/signup-success.html
+++ b/src/main/resources/templates/signup-success.html
@@ -1,4 +1,4 @@
-
+<!------------------------dummy code------------------------------------->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
